@@ -1,0 +1,10 @@
+Title: added missing perfometer for interface services
+Level: 1
+Component: checks
+Class: fix
+Compatible: compat
+State: unknown
+Version: 1.4.0i4
+Date: 1482239968
+
+
